# Garage

./: .clang-format  .clang-tidy  .gitignore  BaseProject_8cpp.html  BaseProject_8h.html  BaseProject_8h.js  BaseProject_8h_source.html  Boids_8cpp.html  Boids_8h.html  Boids_8h.js  Boids_8h_source.html  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Camera_8cpp.html  Camera_8h.html  Camera_8h_source.html  CapFPS_8cpp.html  CapFPS_8h.html  CapFPS_8h.js  CapFPS_8h_source.html  Common_8cpp.html  Common_8cpp.js  Common_8h.html  Common_8h.js  Common_8h_source.html  Console_8cpp.html  Console_8h.html  Console_8h.js  Console_8h_source.html  Context_8cpp.html  Context_8cpp.js  Context_8h.html  Context_8h.js  Context_8h_source.html  DataPlotter_8cpp.html  DataPlotter_8h.html  DataPlotter_8h.js  DataPlotter_8h_source.html  EventHandler_8cpp.html  (+686 more)
.github/workflows/: Release.yml  Testing.yml  documentation.yml  release.yml  testing.yml
cmake/: Initialise.cmake  InstallDependencies.cmake  Release.cmake  Version.cmake
cmake/patches/: imgui_node_editor.patch
docs/: Doxyfile  custom.css  footer.html  header.html  mainpage.md  usage.md
docs/graphs/: eventHandler.mmd  sketchy.mmd
res/: garage.desktop.in  icon.rc
res/Shaders/: CompileShader.sh
res/Shaders/Compiled/DXIL/: Boids.frag.dxil  Boids.vert.dxil  BoidsRGB.frag.dxil  BoidsRGB.vert.dxil  DrawCircle.frag.dxil  DrawCircle.vert.dxil  PullSpriteBatch.vert.dxil  RawTriangle.vert.dxil  TexturedQuadColor.frag.dxil
res/Shaders/Compiled/MSL/: Boids.vert.msl  BoidsRGB.frag.msl  BoidsRGB.vert.msl  DrawCircle.frag.msl  DrawCircle.vert.msl  PullSpriteBatch.vert.msl
res/Shaders/Compiled/SPIRV/: Boids.vert.spv  BoidsRGB.frag.spv  BoidsRGB.vert.spv  DrawCircle.frag.spv  DrawCircle.vert.spv  PullSpriteBatch.vert.spv
res/Shaders/Source/: Boids.vert.hlsl  BoidsRGB.frag.hlsl  BoidsRGB.vert.hlsl  DrawCircle.frag.hlsl  DrawCircle.vert.hlsl  PullSpriteBatch.vert.hlsl
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+94 more)
src/: CMakeLists.txt
src/Common/: BaseProject.cpp  BaseProject.h  CMakeLists.txt  Common.cpp  Common.h  Context.cpp  Context.h  RegisterExamples.cpp  RegisterProjects.cpp  SDL_Exception.h
src/Core/: CMakeLists.txt  Console.cpp  Console.h  Context.cpp  Context.h  EventHandler.cpp  EventHandler.h
src/Core/Common/: CMakeLists.txt  Common.cpp  Common.h  SDL_Exception.h  config.h.in  pch.h
src/Core/Event/: CMakeLists.txt  EventHandler.cpp  EventHandler.h
src/Core/ImGuiCore/: CMakeLists.txt  DataPlotter.cpp  DataPlotter.h  FPSTracker.cpp  FPSTracker.h  GameFPSTracker.cpp  GameFPSTracker.h  ImGuiCore.cpp  ImGuiCore.h  ScrollingBuffer.cpp  ScrollingBuffer.h
src/Core/ImGuiCore/NodeEditor/: CMakeLists.txt  NodeEditor.cpp  NodeEditor.h
src/Core/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
src/Examples/: CMakeLists.txt
src/Examples/SimpleExample/: SimpleExample.cpp  SimpleExample.h
src/Examples/SimpleExample2/: SimpleExample2.cpp  SimpleExample2.h
src/Examples/Triangle/: Triangle.cpp  Triangle.h
src/Main/: CMakeLists.txt  Flags.cpp  Flags.h  Main.cpp  Main.h  Main.md  MainImpl.cpp
src/Projects/: CMakeLists.txt
src/Projects/Boids/: CMakeLists.txt
src/Projects/Boids/src/: Boids.cpp  Boids.h  Main.cpp  Main.h
src/Projects/Common/: BaseProject.cpp  BaseProject.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.cpp  RegisterProjects.cpp  SDL_Exception.h
src/Projects/Cube/: CMakeLists.txt  Main.cpp  Main.h
src/Projects/ImGui/: ImGui.cpp  ImGui.h
src/Projects/N_Body_Simulation/: CMakeLists.txt
src/Projects/N_Body_Simulation/src/: Camera.cpp  Camera.h  Main.cpp  Main.h  Particle.cpp  Particle.h
src/Projects/Particle/: CMakeLists.txt
src/Projects/Particle/src/: ImGuiMenu.cpp  ImGuiMenu.h  Main.cpp  Main.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleController.cpp  ParticleController.h  ParticleData.cpp  ParticleData.h  ParticleDefaultData.cpp  ParticleDefaultData.h
src/Projects/SimpleExample/: SimpleExample.cpp  SimpleExample.h
src/Projects/SimpleImGui/: SimpleImGui.cpp  SimpleImGui.h
src/Projects/Triangle/: Triangle.cpp  Triangle.h
src/Projects/Two_Body_Simulation/: CMakeLists.txt
src/Projects/Two_Body_Simulation/src/: Main.cpp  Main.h  Particle.cpp  Particle.h
src/Utils/: CMakeLists.txt  CapFPS.cpp  CapFPS.h  Time.cpp  Time.h  Timer.cpp  Timer.h
src/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/Core/: Console.cpp
test/Utils/: Time.cpp
